# treinamento-wpp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  pyproject.toml  sonar-project.properties  teste.txt
.github/workflows/: build.yml  sonarqube.yml
data/: ModeloDeCartaOuDeclaraçãoDeEstagio.doc  response_1772740637879.json
docs/: ROLE.docx  teste.txt
src/app/: main.py
src/app/api/v1/: auth.py  checklist.py  criterios.py  personas.py  user.py
src/app/core/: database.py
src/app/models/: __init__.py  chat_message.py  chat_session.py  criterio_result.py  evaluation_criteria.py  models_treinmento_wpp.py  persona.py  session_analysis.py  user.py
src/app/schemas/auth/: user_create.py
src/app/schemas/checklist/: checklist_schemas.py
src/app/schemas/criterio/: criterios_schemas.py
src/app/schemas/persona/: persona_create.py
src/app/security/: password.py
src/app/services/persona/: estrutured_data_ia.py  extract_file_content.py
tests/: conftest.py  test_auth.py
